Update tests to test sending datacite 4.0 XML.
Plus general codebase cleanup and documentation.